feat: added delete route * (CRUD COMPLETED)
